--- a/source/stylesheets/index.scss
+++ b/source/stylesheets/index.scss
@@ -543,5 +543,5 @@ footer {
 
 
 /*
-sass --watch source/stylesheets/index.scss build/stylesheets/index.css .
+sass --watch source/stylesheets/index.scss build/stylesheets/index.css ..
 */
