--- a/source/stylesheets/index.scss
+++ b/source/stylesheets/index.scss
@@ -8,8 +8,10 @@
 
 $color-blue: #0000FF;
 nav {
+    
     height: 44px;
     position: relative;
+    padding:10px 16px 10px 16px;
     .navbar {
         input[type=checkbox] {
             display: none;
@@ -20,11 +22,11 @@ nav {
             height: 224px;
             justify-content: space-evenly;
             @media screen and (min-width: 1024px) {
+                position:static;
+
                 display: flex;
                 flex-direction: row;
                 background: none;
-                margin-top: -35px;
-                margin-right: 100px;
                 color: $color-blue;
                 border: none;
                 justify-content: flex-end;
@@ -41,10 +43,8 @@ nav {
         }
         display: flex;
         justify-content: space-between;
-        align-items: center;
         .logo {
             img {
-                position: absolute;
                 left: 16px;
                 top: 10px;
                 @media screen and (min-width: 1024px) {
@@ -56,7 +56,7 @@ nav {
         label {
             .menu-icon {
                 display: flex;
-                position: absolute;
+                
                 top: 10px;
                 right: 16px;
                 cursor: pointer;
@@ -87,17 +87,15 @@ nav {
         width: 100%;
         background: #0000EC;
         @media screen and (min-width: 1024px) {
+            position:static;
             display: flex;
             background: none;
-            margin-top: -35px;
             color: black;
             border: none;
-            display: flex;
-            background: none;
+                        background: none;
             color: black;
             border: none;
             justify-content: flex-end;
-            margin-right: 100px;
         }
         li {
             a {
@@ -125,8 +123,9 @@ nav {
 }
 
 header {
-    margin-top: 29px;
+    
     font-family: 'IBM Plex Mono', monospace;
+    margin:16px;
     @media screen and (min-width: 1024px) {
         margin-left: 184px;
         margin-top: 120px;
@@ -137,8 +136,10 @@ header {
         color: #060A24;
         letter-spacing: 0;
         line-height: 42px;
-        width: 240px;
-        margin-left: 16px;
+        margin-right:16px;
+        
+   width:100%;     
+   
         font-weight: normal;
         span {
             text-decoration: line-through;
@@ -156,8 +157,7 @@ header {
         letter-spacing: 0px;
         line-height: 24px;
         font-size: 16px;
-        margin: 16px 16px 0px;
-        width: 288px;
+        
         height: 66px;
         @media screen and (min-width: 1024px) {
             width: 628px;
@@ -215,7 +215,7 @@ header {
     width: 100%;
     height: auto;
     background-image: linear-gradient(225deg, #0000FF 0%, #0000A3 100%);
-    &::before {
+    /* &::before {
         margin-top: -5px;
         margin-left: 20px;
         position: absolute;
@@ -245,7 +245,7 @@ header {
         transform-origin: bottom left;
         transform: skew(-85deg);
         z-index: 3;
-    }
+    }*/
     .bg-podcasts {
         .episodes {
             margin: 0px 0 25px 16px;
@@ -299,7 +299,7 @@ header {
     }
     img {
         z-index: 2;
-        width: 360px;
+        width: 288px;
         left: 50%;
         transform: translate(-5%, 0);
         @media screen and (min-width: 1024px) {
@@ -342,7 +342,7 @@ header {
         line-height: 22px;
         font-size: 14px;
         margin: 0 auto;
-        width: 288px;
+        width: 100%;
         font-family: 'IBM Plex Sans', sans-serif;
         font-size: 36px;
         line-height: 42px;
@@ -359,7 +359,7 @@ header {
         .fpic {
             margin-top: -5px;
             img {
-                width: 320px;
+                width: 100%;
                 @media screen and (min-width: 1024px) {
                     width: 480px;
                 }
