--- a/source/stylesheets/index.scss
+++ b/source/stylesheets/index.scss
@@ -327,7 +327,6 @@ header {
                     margin: 11px 11px 0px 11px;
                     @media screen and (min-width: 1024px) {
                         margin: 23px 11px 46px 11px;
-
                         width: 584px;
                     }
                 }
@@ -356,12 +355,15 @@ header {
         justify-content: center;
         @media screen and (min-width: 1024px) {
             width: 480px;
+            max-width: 480px;
         }
     }
     .about-us {
         padding: 16px;
         
-        @media screen and (min-width: 1024px) {}
+        @media screen and (min-width: 1024px) {
+            line-height:24px;
+        }
         h2, p {
             font-family: 'IBM Plex Mono', sans-serif;
             color: #060A24;
@@ -373,13 +375,19 @@ header {
             }
         }
         p{
+            @media screen and (min-width: 1024px) {
+                font-size: 16px;
+            }
             padding-bottom:8px;
         }
         h2 {
             font-family: 'IBM Plex Sans', sans-serif;
             font-size: 36px;
             line-height: 42px;
-            padding-bottom:8px;
+            padding-bottom:20px;
+            @media screen and (min-width: 1024px) {
+                font-size: 48px;
+            }
 
         }
     }
@@ -405,27 +413,67 @@ header {
         line-height: 42px;
         margin-bottom: 14px;
         @media screen and (min-width: 1024px) {
-            width: 480px;
-            margin-left: 200px;
+            width:600px;
+            margin-left:200px;
             margin-bottom: 36px;
+            font-size:48px;
+            margin-top: -80px;
+
         }
     }
-    .fprogrammers {
-        display: flex;
-        flex-wrap: wrap;
+    /*.fprogrammers {
+        @media screen and (min-width: 768px) {
+            display: flex;
+            flex-wrap:nowrap;
+               
+        }
+
+        @media screen and (min-width: 1440px) {
+            
+            flex-wrap: wrap;
+
+        }
         .fpic {
+            flex-grow:1;
             margin-top: -5px;
+            .row1{
+                display:flex;
+                flex-direction:row;
+            }
+            .row2{
+                display:flex;
+            }
             img {
                 width: 100%;
                 @media screen and (min-width: 768px) {
-                    width: 50%;
+                    flex-grow:1;
+                                      
                 }
-                @media screen and (min-width: 1024px) {
+                @media screen and (min-width: 1440px) {
                     width: 480px;
+                    
                 }
             }
         }
+    }*/
+.fprogrammers{
+    img{
+        width:100%;
+        margin-top: -5px;
+
     }
+    @media screen and (min-width: 1440px) {
+        display: flex;
+        flex-wrap: wrap;
+        .fpic {
+             margin-top: -5px;
+             width: 480px;
+             flex-grow:1;
+        }
+    }
+}
+
+
 }
 
 .icons-list {
